2008-08-12  Michael Natterer  <mitch@imendio.com>

	* gtk/*.c: consistently chain up using
	GTK_FOO_CLASS(parent_class)->bar(instance) instead of
	(*GTK_FOO_CLASS(parent_class))->bar(instance).

2008-08-12  Matthias Clasen  <mclasen@redhat.com>

	Bug 546730 – gtk_status_icon_get_gicon() should use a return instead
	of an ouput parameter

	* gtk/gtkstatusicon.[hc]: Change gtk_status_icon_get_gicon to
	return the GIcon directly.
	Complaint by Murray Cumming

2008-08-11  Michael Natterer  <mitch@imendio.com>

	Bug 546754 – 2.13.6 update create rendering issue in the evolution
	composer

	* gtk/gtkadjustment.c: instead of CLAMP(), use

	value = MIN (value, upper - page_size);
	value = MAX (value, lower);

	so we don't end up below lower if upper - page_size is smaller
	than lower.

2008-08-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 546616 – CUPS print backend uses 1.2 API without guards

	* modules/printbackends/cups/gtkcupsutils.[hc]: Make use
	of cups 1.2 api dependent on the HAVE_CUPS_1_2 define.
	Patch by Sven Herzberg and Richard Hult

2008-08-11  Michael Natterer  <mitch@imendio.com>

	Bug 547270 – Make GtkHSV public

	* gtk/Makefile.am
	* gtk/gtk.h: install gtkhsv.h as public header (its symbols were
	always public anyway).

	* gtk/gtkhsv.h: add single-include guards, add class struct padding,
	seal the instance member, cleanup.

	* gtk/gtkhsv.c: center the widget in its allocation,
	add "Since: 2.14", cleanup.

2008-08-11  Torsten Schoenfeld  <kaffeetisch@gmx.de>

	* gtk/gtkcalendar.h: Fix the Since: tag of GtkCalendarDetailFunc
	to correctly state 2.14, not 2.16.

2008-08-11  Sven Neumann  <sven@gimp.org>

	* demos/gtk-demo/changedisplay.c
	* demos/gtk-demo/clipboard.c
	* demos/gtk-demo/drawingarea.c
	* demos/gtk-demo/iconview.c
	* demos/gtk-demo/images.c
	* demos/gtk-demo/pixbufs.c: use canonical signal names in the demos.

2008-08-11  Matthias Clasen  <mclasen@redhat.com>

	Bug 547211 – Duplicated mnemonic
